# ytdlp-web

./: .env.example  .gitignore  Cargo.toml  README.md  docs-security.md  linuxmice-component.toml
docs/: architecture.md
src/: db_migrations.rs  main.rs  modules.rs  page.css
src/app/: config.rs  database.rs  mod.rs  server.rs  state.rs
src/features/: mod.rs
src/features/downloader/: domain.rs  jobs.rs  mod.rs  repository.rs
src/integrations/: mod.rs  ytdlp.rs
src/interfaces/: cli.rs  mod.rs
src/interfaces/http/: component_status.rs  downloads.rs  mod.rs  presentation.rs  router.rs
src/persistence/: migrations.rs  mod.rs
src/security/: auth.rs  mod.rs  oidc.rs  public_audit.rs
